package com.conferenchub.conferenceservice.conference.entity;

public enum ConferenceStatus {
    PLANNED, IN_PROGRESS, COMPLETED, CANCELLED
}
