package com.conferenchub.conferenceservice.conference.entity;

public enum ConferenceType {
    ACADEMIC, COMMERCIAL
}