package com.conferenchub.conferenceservice.conference.entity;

import jakarta.persistence.*;
import jakarta.validation.constraints.Email;
import jakarta.validation.constraints.NotBlank;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.data.annotation.CreatedDate;

import java.time.LocalDate;

@Entity
@Table(name = "inscriptions")
@Data
@AllArgsConstructor
@NoArgsConstructor
public class Inscription {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne
    private Conference conference;

    @Email
    @NotBlank
    private String participantEmail;

    @NotBlank
    private String participantName;

    @CreatedDate
    private LocalDate dateInscription;
    private InscriptionStatus status;

}
