package com.conferenchub.conferenceservice.conference.entity;

public enum InscriptionStatus {
    CANCELLED, CONFIRMED
}
