package com.conferenchub.notificationservice.domain.model;

public enum EventType {
    KEYNOTE_CREATED,
    CONFERENCE_CREATED,
    CONFERENCE_STATUS_CHANGED,
    REVIEW_SUBMITTED,
    PARTICIPANT_REGISTERED
}
