package com.conferenchub.notificationservice.domain.model;

public enum NotificationStatus {
    EN_ATTENTE,
    ENVOYEE,
    ECHOUEE
}
