@startuml
title ConferenceHub - Functional Class Diagram

skinparam classAttributeIconSize 0

package "Keynote Service" {
  class Keynote {
    +id: Long
    +nom: String
    +prenom: String
    +email: String
    +fonction: String
  }
}

package "Conference Service" {

  class Conference {
    +id: Long
    +titre: String
    +type: ConferenceType
    +statut: ConferenceStatus
    +date: LocalDate
    +duree: Integer
    +nombreInscrits: Integer
    +score: Double
    +createdAt: LocalDateTime
    +updatedAt: LocalDateTime
  }

  class Review {
    +id: Long
    +date: LocalDate
    +texte: String
    +stars: Integer
    +auteurEmail: String
  }

  class Inscription {
    +id: Long
    +participantEmail: String
    +participantNom: String
    +dateInscription: LocalDate
    +statut: InscriptionStatus
  }

  enum ConferenceType {
    ACADEMIQUE
    COMMERCIALE
  }

  enum ConferenceStatus {
    PLANIFIEE
    EN_COURS
    TERMINEE
    ANNULEE
  }

  enum InscriptionStatus {
    CONFIRMEE
    ANNULEE
  }
}

package "Notification Service" {

  class Notification {
    +id: Long
    +destinataire: String
    +sujet: String
    +contenu: String
    +typeEvenement: EventType
    +referenceId: Long
    +statut: NotificationStatus
    +dateEnvoi: LocalDateTime
    +tentatives: Integer
    +erreurMessage: String
  }

  enum EventType {
    KEYNOTE_CREATED
    CONFERENCE_CREATED
    STATUS_CHANGED
    REVIEW_SUBMITTED
    PARTICIPANT_REGISTERED
  }

  enum NotificationStatus {
    EN_ATTENTE
    ENVOYEE
    ECHOUEE
  }
}

' Relationships

Conference "1" -- "0..*" Review : contains
Conference "1" -- "0..*" Inscription : contains

Conference "*" -- "*" Keynote : assigned to

Review "*" --> "1" Conference
Inscription "*" --> "1" Conference

Notification --> EventType
Notification --> NotificationStatus

@enduml